third_party/blink/renderer/core/page/page_animator.cc
@@ -11,6 +11,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "third_party/blink/renderer/core/frame/local_frame_view.h"
 #include "third_party/blink/renderer/core/page/chrome_client.h"
 #include "third_party/blink/renderer/core/page/page.h"
+#include "third_party/blink/renderer/core/page/validation_message_client.h"
 #include "third_party/blink/renderer/core/paint/paint_layer_scrollable_area.h"
 #include "third_party/blink/renderer/core/svg/svg_document_extensions.h"
 #include "third_party/blink/renderer/platform/instrumentation/tracing/trace_event.h"
@@ -81,6 +82,8 @@ void PageAnimator::ServiceScriptedAnimations(
         document->Lifecycle());
     document->ServiceScriptedAnimations(monotonic_animation_start_time);
   }
+
+  page_->GetValidationMessageClient().LayoutOverlay();
 }
 
 void PageAnimator::SetSuppressFrameRequestsWorkaroundFor704763Only(
