third_party/blink/renderer/core/page/validation_message_client_impl.h
@@ -27,7 +27,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #ifndef THIRD_PARTY_BLINK_RENDERER_CORE_PAGE_VALIDATION_MESSAGE_CLIENT_IMPL_H_
 #define THIRD_PARTY_BLINK_RENDERER_CORE_PAGE_VALIDATION_MESSAGE_CLIENT_IMPL_H_
 
-#include "third_party/blink/renderer/core/core_export.h"
+#include "third_party/blink/renderer/core/page/page.h"
 #include "third_party/blink/renderer/core/page/popup_opening_observer.h"
 #include "third_party/blink/renderer/core/page/validation_message_client.h"
 #include "third_party/blink/renderer/platform/geometry/int_rect.h"
@@ -40,22 +40,21 @@ namespace blink {
 class LocalFrameView;
 class PageOverlay;
 class ValidationMessageOverlayDelegate;
-class WebViewImpl;
 
-class CORE_EXPORT ValidationMessageClientImpl final
+class ValidationMessageClientImpl final
     : public GarbageCollectedFinalized<ValidationMessageClientImpl>,
       public ValidationMessageClient,
       private PopupOpeningObserver {
   USING_GARBAGE_COLLECTED_MIXIN(ValidationMessageClientImpl);
 
  public:
-  static ValidationMessageClientImpl* Create(WebViewImpl&);
+  static ValidationMessageClientImpl* Create(Page&);
   ~ValidationMessageClientImpl() override;
 
   void Trace(blink::Visitor*) override;
 
  private:
-  ValidationMessageClientImpl(WebViewImpl&);
+  ValidationMessageClientImpl(Page&);
   void CheckAnchorStatus(TimerBase*);
   LocalFrameView* CurrentView();
   void HideValidationMessageImmediately(const Element& anchor);
@@ -76,7 +75,7 @@ class CORE_EXPORT ValidationMessageClientImpl final
   // PopupOpeningObserver function
   void WillOpenPopup() override;
 
-  WebViewImpl& web_view_;
+  Member<Page> page_;
   Member<const Element> current_anchor_;
   String message_;
   TimeTicks finish_time_;
